Made Helloworld possible

--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -14,5 +14,6 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
+	compile 'org.ow2.asm:asm-debug-all:6.0_BETA'
 	compile project(':Parser')
 }
