--- a/CodeFormatter/build.gradle
+++ b/CodeFormatter/build.gradle
@@ -10,11 +10,9 @@
 // prefer. In this case NetBeans will not add these tasks but you may rely on
 // your own implementation.
 if (!hasProperty('mainClass')) {
-    ext.mainClass = 'org.openzen.zenscript.scriptingexample.Main'
+    ext.mainClass = ''
 }
 
 dependencies {
-	compile project(':Parser')
-	compile project(':JavaBytecodeCompiler')
-	compile project(':CodeFormatter')
+	compile project(':CodeModel')
 }
