- Added validator - Members are now aware of the definition they are in - NotExpressions and EqualsExpressions have been removed; they were redundant

--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -17,4 +17,5 @@ dependencies {
 	compile project(':Parser')
 	compile project(':JavaBytecodeCompiler')
 	compile project(':CodeFormatter')
+	compile project(':Validator')
 }
