- Improving compilation system to have compilation targets - Added run & build functionality to the IDE - Fixed an error in match expressions - WIP on compiling to Java source files

--- a/Constructor/build.gradle
+++ b/Constructor/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 	compile 'org.json:json:20180130'
 	compile project(':CodeModel')
 	compile project(':Parser')
+	compile project(':Linker')
 	compile project(':Validator')
+	compile project(':CompilerShared')
 	compile project(':JavaBytecodeCompiler')
+	compile project(':JavaSourceCompiler')
 }
