--- a/JavaBytecodeCompiler/build.gradle
+++ b/JavaBytecodeCompiler/build.gradle
@@ -16,4 +16,5 @@ if (!hasProperty('mainClass')) {
 dependencies {
 	compile 'org.ow2.asm:asm-debug-all:6.0_BETA'
 	compile project(':CodeModel')
+	compile project(':CompilerShared')
 }
