- Fixed ranges, all range types should be supported now - Cleaned up unused code - Refactored the JavaMethodInfo class to the shared JavaMethod one - Use valueOf for boxing instead of the boxed type constructors

--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -16,6 +16,7 @@ if (!hasProperty('mainClass')) {
 dependencies {
 	compile project(':Parser')
 	compile project(':JavaBytecodeCompiler')
+	compile project(':JavaShared')
 	compile project(':CodeFormatter')
 	compile project(':Validator')
 	compile project(':Constructor')
