- Added usize as basic type - Ranges now only have a single base type; from and to must be the same type - Adjusted builtins and stdlib to use usize where applicable - Moved building a SemanticModule from ParsedFile to the parser; reduces dependencies

--- a/Parser/build.gradle
+++ b/Parser/build.gradle
@@ -16,4 +16,5 @@ if (!hasProperty('mainClass')) {
 dependencies {
     compile project(':Shared')
 	compile project(':CodeModel')
+	compile project(':CompilerShared')
 }
