- Improve work on the serializer and fixed some code issues that came up with them. - Start work on the deserializer

--- a/IDE/build.gradle
+++ b/IDE/build.gradle
@@ -17,3 +17,23 @@ dependencies {
 	compile project(':DrawableGui')
 	compile project(':Constructor')
 }
+
+task fatJar(type: Jar) {
+	manifest {
+        attributes 'Implementation-Title': 'ZenCode IDE',
+			'Class-Path': '.',
+        	'Main-Class': 'org.openzen.zenscript.ide.Main'
+    }
+    baseName = project.name + '-all'
+    from {
+		configurations.compile.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	} {
+		exclude "META-INF/INDEX.LIST"
+		exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+	}
+    with jar
+}
