--- a/JavaIntegration/build.gradle
+++ b/JavaIntegration/build.gradle
@@ -10,13 +10,13 @@
 // prefer. In this case NetBeans will not add these tasks but you may rely on
 // your own implementation.
 if (!hasProperty('mainClass')) {
-    ext.mainClass = 'org.openzen.zenscript.scriptingexample.Main'
+    ext.mainClass = ''
 }
 
 dependencies {
+	compile project(':CodeModel')
+	compile project(':CompilerShared')
 	compile project(':Parser')
 	compile project(':JavaBytecodeCompiler')
-	compile project(':JavaShared')
-	compile project(':CodeFormatter')
-    compile project(':JavaIntegration')
+	compile project(':JavaAnnotations')
 }
