Simplified dependencies and the build tree with some minor refactoring.

--- a/JavaAnnotations/build.gradle
+++ b/JavaAnnotations/build.gradle
@@ -14,11 +14,5 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
-    // TODO: Add dependencies here
-    //   but note that JUnit should have already been added in parent.gradle.
-    //   By default, only the Maven Central Repository is specified in
-    //   parent.gradle.
-    //
-    // You can read more about how to add dependency here:
-    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
+    // no dependencies
 }
