--- a/common.gradle
+++ b/common.gradle
@@ -5,22 +5,17 @@
 apply plugin: 'java'
 apply plugin: 'maven'
 
-String mavenGroupId = 'org.openzen.zenscript'
-String mavenVersion = '1.0-SNAPSHOT'
+String mavenGroupId = 'org.openzen.zencode'
+String mavenVersion = '0.1.2'
 
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 repositories {
     mavenCentral();
-    // You may define additional repositories, or even remove "mavenCentral()".
-    // Read more about repositories here:
-    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:repositories
 }
 
 dependencies {
-    // Adding dependencies here will add the dependencies to each subproject.
-    testCompile group: 'junit', name: 'junit', version: '4.10'
 	compile 'net.sf.trove4j:trove4j:3.0.3'
 }
 
@@ -32,11 +27,6 @@ version = mavenVersion
 task sourcesJar(type: Jar, dependsOn: classes, description: 'Creates a jar from the source files.') {
     classifier = 'sources'
     from sourceSets.main.allSource
-}
-
-artifacts {
-    archives jar
-    archives sourcesJar
 }
 
 configure(install.repositories.mavenInstaller) {
