- Fix auto getters & setters for static fields not being static - Fix getters for globals not having their corresponding fields registered correctly in the native implementation - Added java sources for JavaScripting

--- a/JavaScripting/build.gradle
+++ b/JavaScripting/build.gradle
@@ -12,7 +12,9 @@ jar {
 	dependsOn javaScriptingProjects.collect{ it+":compileJava"}
     from files(javaScriptingProjects.collect{ project(it).sourceSets.main.output })
 }
-
+sourcesJar {
+    from files(javaScriptingProjects.collect { project(it).sourceSets.main.allSource })
+}
 install {
 	repositories.mavenInstaller {
 		pom.artifactId = 'zencode-javascripting'
