--- a/common.gradle
+++ b/common.gradle
@@ -6,7 +6,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 
 String mavenGroupId = 'org.openzen.zencode'
-String mavenVersion = '0.3.0'
+String mavenVersion = '0.3.1'
 
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
@@ -23,10 +23,12 @@ String mavenArtifactId = name
 
 group = mavenGroupId
 version = mavenVersion
-
 task sourcesJar(type: Jar, dependsOn: classes, description: 'Creates a jar from the source files.') {
     classifier = 'sources'
     from sourceSets.main.allSource
+}
+artifacts {
+	archives sourcesJar
 }
 
 configure(install.repositories.mavenInstaller) {
