--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -15,4 +15,13 @@ if (!hasProperty('mainClass')) {
 
 dependencies {
     compile project(':JavaIntegration')
+    testCompile group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
+    testRuntime group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
+}
+
+test {
+    useJUnitPlatform()
+    testLogging{
+        events "PASSED", "FAILED", "SKIPPED"
+    }
 }
