--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -19,6 +19,11 @@ dependencies {
     testRuntime group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
 }
 
+processResources {
+    dependsOn(":StdLibs:zipItUp")
+    from files(evaluationDependsOn(":StdLibs").tasks.getByName("zipItUp").outputs)
+}
+
 test {
     //useJUnitPlatform()
     testLogging{
