--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -25,8 +25,8 @@ processResources {
 }
 
 test {
-    //useJUnitPlatform()
-    testLogging{
+    useJUnitPlatform()
+    testLogging {
         events "PASSED", "FAILED", "SKIPPED"
     }
 }
