--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -25,7 +25,7 @@ processResources {
 }
 
 test {
-    //useJUnitPlatform()
+    useJUnitPlatform()
     testLogging {
         events "PASSED", "FAILED", "SKIPPED"
     }
