--- a/common.gradle
+++ b/common.gradle
@@ -8,8 +8,9 @@ apply plugin: 'maven'
 String mavenGroupId = 'org.openzen.zencode'
 String mavenVersion = '0.3.8'
 
-if(!(System.getenv('BRANCH_NAME') ?: 'master').equalsIgnoreCase('master')) {
-	mavenVersion += '.' + System.getenv('BRANCH_NAME').replaceAll('[^A-Za-z-_0-9]', '_')
+String branchName = (System.getenv('BRANCH_NAME') ?: 'master').replaceAll('[^A-Za-z-_0-9]', '_')
+if(!branchName.equalsIgnoreCase('master')) {
+	mavenVersion = branchName + '-' + mavenVersion
 }
 
 if (System.getenv('BUILD_NUMBER') != null) {
