--- a/JavaBytecodeCompiler/build.gradle
+++ b/JavaBytecodeCompiler/build.gradle
@@ -14,8 +14,8 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
-	compile group: 'org.ow2.asm', name: 'asm', version: '7.2'
-	compile group: 'org.ow2.asm', name: 'asm-commons', version: '7.2'
-	compile project(':CodeModel')
-	compile project(':JavaShared')
+	api group: 'org.ow2.asm', name: 'asm', version: '7.2'
+	api group: 'org.ow2.asm', name: 'asm-commons', version: '7.2'
+	api project(':CodeModel')
+	api project(':JavaShared')
 }
