--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -14,9 +14,9 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
-	compile project(':JavaIntegration')
-	testCompile group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
-	testRuntime group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
+	api project(':JavaIntegration')
+	testImplementation group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
+	testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
 }
 
 processResources {
