--- a/ScriptingExample/build.gradle
+++ b/ScriptingExample/build.gradle
@@ -15,6 +15,7 @@ if (!hasProperty('mainClass')) {
 
 dependencies {
 	api project(':JavaIntegration')
+	testImplementation project(':ScriptingEngineTester')
 	testImplementation group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
 	testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter", version: "5.4.2"
 }
