--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,14 @@ jobs:
 
         steps:
             -   name: Checkout
-                uses: actions/checkout@v2.4.0
+                uses: actions/checkout@v4
                 with:
                     submodules: 'recursive'
-            -   name: Set up JDK 1.8
-                uses: actions/setup-java@v1
+            -   name: Set up JDK 8
+                uses: actions/setup-java@v2
                 with:
-                    java-version: 1.8
+                    java-version: '8'
+                    distribution: 'zulu'
             -   name: Cache
                 uses: actions/cache@v1
                 with:
@@ -23,5 +24,7 @@ jobs:
                     key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle') }}
             -   name: Executable gradlew
                 run: chmod +x gradlew
-            -   name: Build with Gradle
-                run: ./gradlew build
+            -   name: Run Tests
+                run: ./gradlew ScriptingExample:test
+        #The project does not `build` atm, but we're using the ScriptingExample module to track passing tests
+
